welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:31: error: not found: value avanche
gauche() ; avanche() ; 
           ^